--- a/package.json
+++ b/package.json
@@ -16,25 +16,25 @@
     "start-all": "powershell -ExecutionPolicy Bypass -File scripts/start-dev.ps1"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@expo/vector-icons": "~14.0.4",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.7.0",
-    "expo": "^49.0.21",
-    "expo-constants": "~14.4.2",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.14",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "expo": "~52.0.0",
+    "expo-constants": "~17.0.8",
+    "expo-linear-gradient": "~14.0.2",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.22",
+    "expo-status-bar": "~2.0.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-native": "^0.76.9",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.12.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.1.0",
@@ -42,16 +42,20 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
-    "@types/react": "~18.2.14",
-    "babel-preset-expo": "~9.5.0",
+    "@types/react": "~18.3.12",
+    "babel-preset-expo": "~12.0.0",
     "typescript": "^5.7.0"
   },
   "private": true,
   "overrides": {
     "react": "$react",
-    "react-dom": "$react-dom",
-    "@react-navigation/native": "^6.0.0",
-    "react-native-screens": "~3.22.0",
-    "react-native-safe-area-context": "4.6.3"
+    "react-dom": "$react-dom"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": ["react-native-chart-kit", "redux-persist", "react-native-vector-icons"]
+      }
+    }
   }
 }
