--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,48 @@
-# OSX
-#
-.DS_Store
+# ─── Node ───────────────────────────────────────────────────────────
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.pnpm-debug.log*
 
-# Xcode
-#
+# ─── Expo / React Native ────────────────────────────────────────────
+.expo/
+dist/
+web-build/
+*.jsbundle
+.metro-health-check*
+.expo-shared/
+
+# Expo native builds (generated files)
+android/
+ios/
+
+# ─── Environment & Secrets ──────────────────────────────────────────
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+backend/.env
+backend/.env.*
+
+# ─── Android ────────────────────────────────────────────────────────
+*.keystore
+!debug.keystore
+*.hprof
+local.properties
+.gradle/
 build/
+*.apk
+*.aab
+
+# ─── iOS / macOS ────────────────────────────────────────────────────
+*.ipa
+*.xcuserstate
+*.xcworkspace
+DerivedData/
+xcuserdata/
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -13,49 +51,34 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata
-*.xccheckout
 *.moved-aside
-DerivedData
+*.xccheckout
 *.hmap
-*.ipa
-*.xcuserstate
-project.xcworkspace
+/ios/Pods/
+.DS_Store
 
-# Android/IntelliJ
-#
-build/
-.idea
-.gradle
-local.properties
+# ─── IDE ────────────────────────────────────────────────────────────
+.idea/
+.vscode/settings.json
 *.iml
-*.hprof
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
 
-# node.js
-#
-node_modules/
-npm-debug.log
-yarn-error.log
+# ─── Logs ───────────────────────────────────────────────────────────
+logs/
+*.log
+backend/logs/
 
-# BUCK
+# ─── TypeScript ─────────────────────────────────────────────────────
+*.tsbuildinfo
+
+# ─── Misc ───────────────────────────────────────────────────────────
+.buck/
 buck-out/
 \.buckd/
-*.keystore
-!debug.keystore
-
-# Bundle artifacts
-*.jsbundle
-
-# CocoaPods
-/ios/Pods/
-
-# Expo
-.expo/
-dist/
-web-build/
-
-# @generated expo-cli sync
-/.expo/
-
-# Temporary files created by Metro to check the health of the file watcher
-.metro-health-check*
+.cache/
+tmp/
+*.tmp
+Thumbs.db
